# NHF

./: CMakeLists.txt  README.md  documentation.md  dokumentacio2.md  md_pdf.css  run.sh
libs/lib/: SDL3_test.lib
libs/lib/pkgconfig/: sdl3-image.pc
src/: collisions.txt  crop_state.txt  event_loop.c  foregrid_state.txt  foreground_grid_state.txt  grid.c  grid_state.txt  main.c  save_state.txt
src/img/: cropTilemap-Recovered.psd  cropTilemap.psd  grid_state.txt  itemTilemap.psd  placeholderTilemap.psd  playerTilemap.psd
src/window/: anim.c  character.c  crop.c  event_loop.c  game_state.c  grid.c  init.c  movement.c  text_renderer.c  texture.c  ticks.c  tool.c  ui.c  window.h
